ui: fix overflow on mobile

--- a/frontend/src/Root.css
+++ b/frontend/src/Root.css
@@ -1,6 +1,6 @@
 .site-layout-content {
     min-height: 280px;
-    padding: 24px;
+    padding: 5px 24px 24px 24px;
 }
 #components-layout-demo-top .logo {
     float: left;
@@ -12,4 +12,10 @@
 .ant-row-rtl #components-layout-demo-top .logo {
     float: right;
     margin: 16px 0 16px 24px;
+}
+
+@media only screen and (min-width: 950px) {
+    main {
+        padding: 20px 50px;
+    }
 }
